Fix bug 672102 - toolbarbutton-day-text is hard to read with personas. r=decathlon

--- a/calendar/lightning/themes/pinstripe/lightning.css
+++ b/calendar/lightning/themes/pinstripe/lightning.css
@@ -160,6 +160,7 @@ radio[pane=paneLightning] {
   font-size: 7pt;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  text-shadow: none;
   color: DarkBlue;
   background-color: transparent;
 }
